--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
                     <h2 class="mb-5">學歷 Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">國立臺灣師範大學 National Taiwan Normal University</h3>
+                            <div class="subheading mb-3">資訊工程 Computer Science and Information Engineering</div>
+                            <!--<div>Computer Science - Web Development Track</div>-->
+                            <!--<p>GPA: 3.23</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">九月 2016 - 至今<br>September 2016 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">桃園市育達高級中等學校 Taoyuan YUDA High School</h3>
+                            <div class="subheading mb-3">普通科菁英班</div>
+                            <!--<p>GPA: 3.56</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">九月 2013 - 六月 2016<br>September 2013 - June 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -133,8 +133,39 @@
                         <li class="list-inline-item"><i class="fab fa-ubuntu"></i></li>
                          <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-
                     </ul>
+                    
+                    <ul class="fa-ul mb-3">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Html
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            CSS
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            JavaScript
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Ubuntu
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            C/C++
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Wordpress
+                        </li>
+                    </ul>
+                    
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
