--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">學歷 Education</h2>
+                    <h2 class="mb-5">本豬的學歷 Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">國立臺灣師範大學 National Taiwan Normal University</h3>
