--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>新新老師 - 陳子新</title>
+        <title>陳子新</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -128,7 +128,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">國立臺灣師範大學 National Taiwan Normal University</h3>
-                            <div class="subheading mb-3">資訊工程（就讀中） Computer Science and Information Engineering
+                            <div class="subheading mb-3">資訊工程學系（就讀中）
                             <br>
                             中等教育學程（修習中）
                             </div>
@@ -136,7 +136,7 @@
                             <!--<div>Computer Science - Web Development Track</div>-->
                             <!--<p>GPA: 3.23</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">九月 2016 - 至今<br>September 2016 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">九月 2016 - 至今<br></span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -144,7 +144,7 @@
                             <div class="subheading mb-3">普通科菁英班</div>
                             <!--<p>GPA: 3.56</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">九月 2013 - 六月 2016<br>September 2013 - June 2016</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">九月 2013 - 六月 2016<br></span></div>
                     </div>
                 </div>
             </section>
@@ -153,7 +153,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">技能 Skills</h2>
-                    <div class="subheading mb-3">程式語言與技能 Programming Languages & Tools</div>
+                    <div class="subheading mb-3">程式語言與技能</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
